# img_tile

./: .gitignore  Cargo.toml  README.md
config/: config.json  config_200px_kroma_2x2.json  config_200px_kroma_2x3aspect.json  config_200x300px_kroma_2x3.json  config_400px_4x4_window.json  config_40px_1x1.json  config_40px_1x1_tilespace.json  config_40px_1x4.json  config_40px_4x1.json  config_40px_4x4.json  config_Kroma_4x2_50x100.json  config_cathleenJ_60x60_kroma.json  config_cathleenJ_60x60_mitiente.json  config_corrupt.json  config_crayart_60x60_crayola.json  config_hb_harvey_40x40_mitiente.json  config_kemptonhat_60x60_kustom_pigmnts.json  config_kemptonhatfractal_60x60_kustom_pigmnts.json  config_ksn_675.json  config_maryb_1000x1000_cray.json  config_maryb_60x60_kroma.json  config_maryb_60x60_kustom_pigmnts.json  config_maryb_60x60_mitiente.json  config_simple_square.json
mosaics/: mb_custom_pigmnts.json
src/: json_export.rs  kd_tree.rs  main.rs  modtile.rs  pdf_util.rs
tile_json/: crayola_colors.json  kroma_colors.json  mb_miteinte_colors.json  miteinte_colors.json
